--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Abado Jack Mtulla</title>
+	<title>Brian Barmao</title>
 	<meta name="description" content="" />
 	<meta name="author" content="" />
 
@@ -25,16 +25,16 @@
 				<h2>
 					Hello, I'm
 				</h2>
-				<h1>Abado Jack Mtulla</h1>
+				<h1>Brian Barmao</h1>
 			</div>
 		</div>
 		<div class="row">
 			<div class="offset-by-two column eight columns">
 				<h4>
-					I write code and push to <a href="http://github.com/abadojack" class="social-link github" title="Github">Github</a>. I'm also on 
-					<a href="http://twitter.com/abadojack" class="social-link twitter" title="Twitter">Twitter</a>,
-					<a href="https://www.linkedin.com/in/abado-mtulla-b66624107" class="social-link linkedin" title="LinkedIn">LinkedIn</a>, and 
-					<a href="https://medium.com/@abadojack" class="social-link medium" title="Medium">Medium</a>.
+					I write code and push to <a href="http://github.com/barmao" class="social-link github" title="Github">Github</a>. I'm also on 
+					<a href="https://twitter.com/_barmao" class="social-link twitter" title="Twitter">Twitter</a>,
+					<a href="https://www.linkedin.com/in/barmao" class="social-link linkedin" title="LinkedIn">LinkedIn</a>, and 
+					<a href="https://medium.com/@barmao" class="social-link medium" title="Medium">Medium</a>.
 				</h4>
 			</div>
 		</div>
